# src/definitions/swagger.json
@@ -3249,6 +3249,30 @@
 				"description": "",
 				"parameters": []
 			}
+		},
+		"/api/leagues/import/nhl/{leagueId}/matches": {
+			"get": {
+				"operationId": "NHLImportMatches",
+				"produces": [
+					"text/html"
+				],
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"description": "",
+				"parameters": [
+					{
+						"description": "",
+						"in": "path",
+						"name": "leagueId",
+						"required": true,
+						"type": "number",
+						"format": "double"
+					}
+				]
+			}
 		}
 	},
 	"swagger": "2.0",
